--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mission.fxml
@@ -8,58 +8,75 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MissionController">
    <children>
-      <FlowPane fx:id="flowPane" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="pageVBox" prefHeight="400.0" prefWidth="600.0">
          <children>
             <RadioButton fx:id="ordrePermanentRadioBtn" mnemonicParsing="false" onAction="#ordrePermanentRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" text="Ordre de mission permanent (dans la fonction indiqué avant)">
                <toggleGroup>
-                  <ToggleGroup fx:id="typeOm" />
+                  <ToggleGroup fx:id="typeOmToggleG" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOm" />
-            <Label fx:id="labelDu" prefHeight="50.0" prefWidth="50.0" text="du">
-               <FlowPane.margin>
-                  <Insets left="20.0" />
-               </FlowPane.margin>
-            </Label>
-            <DatePicker fx:id="dateDebut" prefWidth="174.0" />
-            <Label fx:id="labelAu" alignment="CENTER" prefHeight="50.0" prefWidth="66.0" text="au" />
-            <DatePicker fx:id="dateFin">
-               <FlowPane.margin>
-                  <Insets right="100.0" />
-               </FlowPane.margin>
-            </DatePicker>
-            <Label prefHeight="42.0" prefWidth="134.0" text="Motif du déplacement :" />
-            <TextField fx:id="motifDeplacementTextField">
-               <FlowPane.margin>
-                  <Insets right="200.0" />
-               </FlowPane.margin>
-            </TextField>
-            <Label prefHeight="17.0" prefWidth="135.0" text="Lieu du déplacement :" />
-            <TextField fx:id="lieuDeplacementTextField">
-               <FlowPane.margin>
-                  <Insets right="300.0" />
-               </FlowPane.margin>
-            </TextField>
-            <Label prefHeight="38.0" prefWidth="81.0" text="Au titre de :" />
-            <RadioButton fx:id="fonctionHabituelleRadioBtn" mnemonicParsing="false" prefHeight="17.0" prefWidth="147.0" text="La fonction habituelle">
-               <toggleGroup>
-                  <ToggleGroup fx:id="titre" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="formationRadioBtn" mnemonicParsing="false" text="La formation" toggleGroup="$titre" />
-            <Button fx:id="suivantBtn" mnemonicParsing="false" onAction="#passerAMoyenTransport" text="Suivant &gt;&gt;">
-               <FlowPane.margin>
-                  <Insets left="400.0" top="60.0" />
-               </FlowPane.margin>
+            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOmToggleG" />
+            <HBox fx:id="missionPonctuelHBox" prefWidth="600.0">
+               <children>
+                  <Label fx:id="labelDu" alignment="CENTER" prefHeight="50.0" prefWidth="50.0" text="du" />
+                  <DatePicker fx:id="dateDebut" prefWidth="174.0">
+                     <HBox.margin>
+                        <Insets top="13.0" />
+                     </HBox.margin>
+                  </DatePicker>
+                  <Label fx:id="labelAu" alignment="CENTER" prefHeight="50.0" prefWidth="50.0" text="au" />
+                  <DatePicker fx:id="dateFin">
+                     <HBox.margin>
+                        <Insets top="13.0" />
+                     </HBox.margin>
+                  </DatePicker>
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefWidth="600.0">
+               <children>
+                  <Label prefHeight="50.0" prefWidth="150.0" text="Motif du déplacement :" />
+                  <TextField fx:id="motifDeplacementTextField" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets top="13.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox prefWidth="600.0">
+               <children>
+                  <Label prefHeight="50.0" prefWidth="150.0" text="Lieu du déplacement :" />
+                  <TextField fx:id="lieuDeplacementTextField" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets top="13.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox prefWidth="600.0">
+               <children>
+                  <Label prefHeight="50.0" prefWidth="81.0" text="Au titre de :" />
+                  <RadioButton fx:id="fonctionHabituelleRadioBtn" mnemonicParsing="false" prefHeight="50.0" prefWidth="147.0" text="La fonction habituelle">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="titreToggleG" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="formationRadioBtn" mnemonicParsing="false" prefHeight="50.0" text="La formation" toggleGroup="$titreToggleG" />
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#passerAMoyenTransport" text="Suivant &gt;&gt;">
+               <VBox.margin>
+                  <Insets left="400.0" top="20.0" />
+               </VBox.margin>
             </Button>
          </children>
-         <padding>
-            <Insets left="10.0" />
-         </padding>
-      </FlowPane>
+      </VBox>
    </children>
 </AnchorPane>
