--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Transport.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Transport.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.231" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.TransportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.TransportController">
    <children>
       <VBox fx:id="page" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -112,7 +113,7 @@
                   <RadioButton fx:id="train2emeClasseRadioBtn" mnemonicParsing="false" text="2ème classe" toggleGroup="$classeTrain" />
                </children>
             </HBox>
-            <VBox fx:id="cramcoVBox" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="cramcoVBox" prefWidth="100.0">
                <children>
                   <Label alignment="CENTER" prefHeight="25.0" prefWidth="606.0" text="Billet pris par la C.R.A.M.C.O.">
                      <font>
@@ -121,21 +122,30 @@
                   </Label>
                   <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0" spacing="15.0">
                      <children>
-                        <RadioButton fx:id="cramcoOuiRadioBtn" mnemonicParsing="false" text="Oui">
+                        <RadioButton fx:id="cramcoOuiRadioBtn" mnemonicParsing="false" onAction="#ouiOuNonSelectionne" text="Oui">
                            <toggleGroup>
                               <ToggleGroup fx:id="cramco" />
                            </toggleGroup></RadioButton>
-                        <RadioButton fx:id="cramcoNonRadioBtn" mnemonicParsing="false" text="Non" toggleGroup="$cramco" />
+                        <RadioButton fx:id="cramcoNonRadioBtn" mnemonicParsing="false" onAction="#ouiOuNonSelectionne" text="Non" toggleGroup="$cramco" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="33.0" prefWidth="600.0" spacing="15.0">
+                  <HBox fx:id="cramcoHBox" alignment="CENTER" prefHeight="33.0" prefWidth="600.0" spacing="15.0">
                      <children>
-                        <RadioButton fx:id="cramcoAutreRadioBtn" mnemonicParsing="false" text="Autre (à préciser) :" toggleGroup="$cramco" />
+                        <RadioButton fx:id="cramcoAutreRadioBtn" mnemonicParsing="false" onAction="#autreSelectionne" text="Autre (à préciser) :" toggleGroup="$cramco" />
                         <TextField fx:id="cramcoAutreTextField" />
                      </children>
                   </HBox>
                </children>
             </VBox>
+            <HBox prefHeight="50.0" prefWidth="600.0" spacing="35.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#retournerATypeOM" prefWidth="75.0" text="Retour" />
+                  <Button mnemonicParsing="false" onAction="#validerOM" prefWidth="75.0" text="Valider" />
+               </children>
+               <padding>
+                  <Insets left="200.0" top="10.0" />
+               </padding>
+            </HBox>
          </children>
       </VBox>
    </children>
