--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
@@ -1,43 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane prefHeight="375.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
    <children>
-      <ScrollPane prefHeight="400.0" prefWidth="300.0" vbarPolicy="NEVER">
+      <ScrollPane fx:id="listeOMScrollPane" prefHeight="350.0" prefWidth="300.0" vbarPolicy="NEVER">
          <content>
-            <VBox prefHeight="100.0" prefWidth="300.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label prefHeight="50.0" prefWidth="100.0" text="Limoges">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </Label>
-                        <Label prefHeight="50.0" prefWidth="200.0" text="Du 12/00/0000 au 00/00/0000" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="30.0">
-                     <children>
-                        <Button mnemonicParsing="false" prefWidth="80.0" text="Afficher" />
-                        <Button mnemonicParsing="false" prefWidth="80.0" text="Modifier" />
-                        <Button mnemonicParsing="false" prefWidth="80.0" text="Supprimer" />
-                     </children>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </HBox>
-               </children>
-            </VBox>
+            <VBox fx:id="listeOmVBox" />
          </content>
       </ScrollPane>
+      <Button layoutX="50.0" layoutY="361.0" mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission" />
    </children>
 </AnchorPane>
