--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="375.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
    <children>
-      <ScrollPane fx:id="listeOMScrollPane" prefHeight="350.0" prefWidth="300.0" vbarPolicy="NEVER">
+      <ScrollPane prefHeight="350.0" prefWidth="300.0" vbarPolicy="NEVER">
          <content>
             <VBox fx:id="listeOmVBox" />
          </content>
