--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="375.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
+<AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
    <children>
-      <ScrollPane prefHeight="350.0" prefWidth="300.0" vbarPolicy="NEVER">
+      <ScrollPane hbarPolicy="NEVER" prefHeight="325.0" prefWidth="300.0">
          <content>
             <VBox fx:id="listeOmVBox" />
          </content>
       </ScrollPane>
-      <Button layoutX="50.0" layoutY="361.0" mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission" />
+      <Button layoutX="50.0" layoutY="361.0" mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission" AnchorPane.bottomAnchor="15.0" />
    </children>
 </AnchorPane>
