--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,11 +8,19 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
    <children>
-      <ScrollPane hbarPolicy="NEVER" prefHeight="325.0" prefWidth="300.0">
-         <content>
-            <VBox fx:id="listeOmVBox" />
-         </content>
-      </ScrollPane>
-      <Button layoutX="50.0" layoutY="361.0" mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission" AnchorPane.bottomAnchor="15.0" />
+      <VBox prefHeight="400.0" prefWidth="300.0">
+         <children>
+            <ScrollPane hbarPolicy="NEVER" prefHeight="325.0" prefWidth="300.0">
+               <content>
+                  <VBox fx:id="listeOmVBox" />
+               </content>
+            </ScrollPane>
+            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission">
+               <VBox.margin>
+                  <Insets left="45.0" top="25.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
