--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Options.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Options.fxml
@@ -12,6 +12,6 @@
       <Button layoutX="419.0" layoutY="60.0" mnemonicParsing="false" onAction="#ouvrirFileChooser" text="..." />
       <Button layoutX="226.0" layoutY="310.0" mnemonicParsing="false" onAction="#sauvegarder" text="Sauvegarder les options" />
       <Label layoutX="35.0" layoutY="130.0" text="Modifier vos coordonnées :" />
-      <Button layoutX="258.0" layoutY="125.0" mnemonicParsing="false" text="Modifier" />
+      <Button layoutX="258.0" layoutY="125.0" mnemonicParsing="false" onAction="#modifierAgent" text="Modifier" />
    </children>
 </AnchorPane>
