--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mail.fxml
@@ -5,19 +5,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="destinataires" layoutX="160.0" layoutY="51.0" prefHeight="25.0" prefWidth="180.0" />
-      <Text layoutX="68.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destinataire(s) : " />
-      <TextField fx:id="destEnCopie" layoutX="160.0" layoutY="88.0" prefHeight="25.0" prefWidth="180.0" />
-      <Text layoutX="98.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="En copie : " />
-      <TextField fx:id="objetDuMail" layoutX="160.0" layoutY="125.0" prefHeight="25.0" prefWidth="180.0" />
-      <Text layoutX="114.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Objet : " />
-      <TextField fx:id="CorpsDuMail" layoutX="160.0" layoutY="165.0" prefHeight="126.0" prefWidth="180.0" />
-      <Text layoutX="114.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Corps : " />
+      <TextField fx:id="destinataires" layoutX="180.0" layoutY="75.0" prefHeight="25.0" prefWidth="180.0" />
+      <Text layoutX="88.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destinataire(s) : " />
+      <TextField fx:id="destEnCopie" layoutX="180.0" layoutY="112.0" prefHeight="25.0" prefWidth="180.0" />
+      <Text layoutX="118.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="En copie : " />
+      <TextField fx:id="objetDuMail" layoutX="180.0" layoutY="149.0" prefHeight="25.0" prefWidth="180.0" />
+      <Text layoutX="134.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Objet : " />
+      <TextField fx:id="CorpsDuMail" layoutX="180.0" layoutY="189.0" prefHeight="126.0" prefWidth="180.0" />
+      <Text layoutX="134.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Corps : " />
       <Button fx:id="btnEnvoyer" layoutX="463.0" layoutY="352.0" mnemonicParsing="false" text="Envoyer" />
       <Button fx:id="btnAnnuler" layoutX="405.0" layoutY="352.0" mnemonicParsing="false" text="Annuler" />
-      <Button fx:id="BtnPieceJointe" layoutX="160.0" layoutY="309.0" mnemonicParsing="false" text="Piece jointe" />
+      <Button fx:id="BtnPieceJointe" layoutX="180.0" layoutY="333.0" mnemonicParsing="false" text="Piece jointe" />
+      <Text layoutX="180.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;" />
+      <Text layoutX="98.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Expéditeur :  " />
+      <TextField fx:id="expediteur" layoutX="180.0" layoutY="25.0" prefHeight="25.0" prefWidth="180.0" />
    </children>
 </AnchorPane>
