--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
+<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
    <top>
       <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -20,26 +20,26 @@
       </HBox>
    </top>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox onMouseClicked="#afficherOrdresMission" prefHeight="200.0" prefWidth="100.0">
+            <VBox onMouseClicked="#afficherOrdresMission" prefHeight="200.0" prefWidth="150.0">
                <children>
-                  <Label text="Ordres de mission" />
+                  <Label alignment="CENTER" prefWidth="150.0" text="Ordres de mission" />
                </children>
             </VBox>
-            <VBox onMouseClicked="#afficherFraisMission" prefHeight="200.0" prefWidth="100.0">
+            <VBox onMouseClicked="#afficherFraisMission" prefHeight="200.0" prefWidth="150.0">
                <children>
-                  <Label text="Frais de mission" />
+                  <Label alignment="CENTER" prefWidth="150.0" text="Frais de mission" />
                </children>
             </VBox>
-            <VBox onMouseClicked="#afficherHorairesTravail" prefHeight="200.0" prefWidth="100.0">
+            <VBox onMouseClicked="#afficherHorairesTravail" prefHeight="200.0" prefWidth="150.0">
                <children>
-                  <Label text="Horaires de travail" />
+                  <Label alignment="CENTER" prefWidth="150.0" text="Horaires de travail" />
                </children>
             </VBox>
-            <VBox onMouseClicked="#modifierOptions" prefHeight="200.0" prefWidth="100.0">
+            <VBox onMouseClicked="#modifierOptions" prefHeight="200.0" prefWidth="150.0">
                <children>
-                  <Label text="Paramètres" />
+                  <Label alignment="CENTER" prefWidth="150.0" text="Paramètres" />
                </children>
             </VBox>
          </children>
