--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Mission.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MissionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MissionController">
    <children>
       <VBox fx:id="pageVBox" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -19,8 +19,14 @@
                <toggleGroup>
                   <ToggleGroup fx:id="typeOmToggleG" />
                </toggleGroup>
+               <VBox.margin>
+                  <Insets left="70.0" />
+               </VBox.margin>
             </RadioButton>
-            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOmToggleG" />
+            <RadioButton fx:id="ordrePonctuelRadioBtn" mnemonicParsing="false" onAction="#ordrePonctuelRadioBtnSelectionne" prefHeight="50.0" prefWidth="600.0" selected="true" text="Ordre de mission ponctuel pour la période (dates de début et de fin) :" toggleGroup="$typeOmToggleG">
+               <VBox.margin>
+                  <Insets left="70.0" />
+               </VBox.margin></RadioButton>
             <HBox fx:id="missionPonctuelHBox" prefWidth="600.0">
                <children>
                   <Label fx:id="labelDu" alignment="CENTER" prefHeight="50.0" prefWidth="50.0" text="du" />
@@ -37,18 +43,24 @@
                   </DatePicker>
                </children>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets left="70.0" top="10.0" />
                </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
-                  <Label prefHeight="50.0" prefWidth="150.0" text="Motif du déplacement :" />
+                  <Label prefHeight="50.0" prefWidth="150.0" text="Motif du déplacement :">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin></Label>
                   <TextField fx:id="motifDeplacementTextField" prefWidth="150.0">
                      <HBox.margin>
                         <Insets top="13.0" />
                      </HBox.margin>
                   </TextField>
                </children>
+               <VBox.margin>
+                  <Insets left="70.0" />
+               </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
@@ -59,6 +71,9 @@
                      </HBox.margin>
                   </TextField>
                </children>
+               <VBox.margin>
+                  <Insets left="70.0" />
+               </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0">
                <children>
@@ -68,19 +83,25 @@
                         <ToggleGroup fx:id="titreToggleG" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton fx:id="formationRadioBtn" mnemonicParsing="false" prefHeight="50.0" text="La formation" toggleGroup="$titreToggleG" />
+                  <RadioButton fx:id="formationRadioBtn" mnemonicParsing="false" prefHeight="50.0" text="La formation" toggleGroup="$titreToggleG">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin></RadioButton>
                </children>
+               <VBox.margin>
+                  <Insets left="70.0" />
+               </VBox.margin>
             </HBox>
             <HBox prefWidth="600.0" spacing="35.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#retournerAInfoPerso" prefWidth="75.0" text="Retour" />
+                  <Button mnemonicParsing="false" onAction="#retournerAInfoPerso" prefHeight="13.0" prefWidth="80.0" text="&lt;&lt; Retour" />
                   <Button mnemonicParsing="false" onAction="#passerAMoyenTransport" text="Suivant &gt;&gt;" />
                </children>
                <padding>
                   <Insets left="275.0" />
                </padding>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets left="100.0" top="10.0" />
                </VBox.margin>
             </HBox>
          </children>
