--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Agent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/Agent.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.231" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.AgentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.AgentController">
    <children>
       <GridPane fx:id="grilleTop" prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -24,64 +24,64 @@
             <RowConstraints maxHeight="354.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Nom :">
+            <Label stylesheets="@../style.css" text="Nom :">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="nomTextField" maxWidth="150.0">
+            <TextField fx:id="nomTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="126.0">
                <GridPane.margin>
-                  <Insets left="50.0" right="20.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Prénom :" GridPane.columnIndex="1">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="25.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="prenomTextField" maxWidth="150.0" GridPane.columnIndex="1">
                <GridPane.margin>
-                  <Insets left="65.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Fonction :" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </GridPane.margin>
             </Label>
             <TextField fx:id="fonctionTextField" maxWidth="150.0" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="65.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="N° CAPSSA :" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="25.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="numCAPSSATextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="80.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Résidence Administrative :" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="residenceAdminTextField" maxWidth="150.0" GridPane.rowIndex="2">
+            <TextField fx:id="residenceAdminTextField" maxWidth="150.0" prefHeight="25.0" prefWidth="161.0" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Coefficient :" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="25.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="coefficientTextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
-                  <Insets left="80.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Unité de travail :" GridPane.rowIndex="3">
@@ -91,17 +91,17 @@
             </Label>
             <TextField fx:id="uniteTavailTextField" maxWidth="150.0" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="100.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Label text="Code analytique :" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="25.0" />
                </GridPane.margin>
             </Label>
             <TextField fx:id="codeAnalytiqueTextField" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets left="110.0" />
+                  <Insets left="155.0" />
                </GridPane.margin>
             </TextField>
             <Button fx:id="suivantBtn" mnemonicParsing="false" onAction="#passerATypeOM" prefHeight="25.0" prefWidth="131.0" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
