--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/MenuAgent.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
+<AnchorPane prefHeight="400.0" prefWidth="300.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.MenuAgentController">
    <children>
       <VBox prefHeight="400.0" prefWidth="300.0">
          <children>
@@ -15,7 +15,7 @@
                   <VBox fx:id="listeOmVBox" />
                </content>
             </ScrollPane>
-            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="25.0" prefWidth="200.0" text="Créer un nouvel ordre de mission">
+            <Button mnemonicParsing="false" onAction="#creerNouveauOm" prefHeight="27.0" prefWidth="211.0" text="Créer un nouvel ordre de mission">
                <VBox.margin>
                   <Insets left="45.0" top="25.0" />
                </VBox.margin>
