--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -7,39 +8,48 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
+<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
    <top>
-      <HBox prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fx:id="imageV" fitHeight="69.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <viewport>
                   <Rectangle2D height="69.0" width="200.0" />
                </viewport>
+               <HBox.margin>
+                  <Insets left="20.0" top="15.0" />
+               </HBox.margin>
             </ImageView>
          </children>
       </HBox>
    </top>
    <left>
-      <VBox prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="150.0" stylesheets="@../menu.css" BorderPane.alignment="CENTER">
          <children>
-            <VBox onMouseClicked="#afficherOrdresMission" prefHeight="200.0" prefWidth="150.0">
+            <VBox id="hov" onMouseClicked="#afficherOrdresMission" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefWidth="150.0" text="Ordres de mission" />
+                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Ordres de mission">
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding></Label>
                </children>
             </VBox>
-            <VBox onMouseClicked="#afficherFraisMission" prefHeight="200.0" prefWidth="150.0">
+            <VBox id="hov" onMouseClicked="#afficherFraisMission" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefWidth="150.0" text="Frais de mission" />
+                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Frais de mission">
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding></Label>
                </children>
             </VBox>
-            <VBox onMouseClicked="#afficherHorairesTravail" prefHeight="200.0" prefWidth="150.0">
+            <VBox id="hov" onMouseClicked="#afficherHorairesTravail" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefWidth="150.0" text="Horaires de travail" />
+                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Horaires de travail" />
                </children>
             </VBox>
-            <VBox onMouseClicked="#modifierOptions" prefHeight="200.0" prefWidth="150.0">
+            <VBox id="hov" onMouseClicked="#modifierOptions" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefWidth="150.0" text="Paramètres" />
+                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Paramètres" />
                </children>
             </VBox>
          </children>
