--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/OrdreMission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/OrdreMission.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.OrdreMissionController">
+<AnchorPane prefHeight="400.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.OrdreMissionController">
    <children>
       <SplitPane fx:id="ordreMissionSplit" prefHeight="400.0" prefWidth="900.0" />
    </children>
