Update suivant FM (WIP)

--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisLogement.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisLogement.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.LogementFMController">
    <children>
       <GridPane layoutX="-14.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -63,12 +63,12 @@
                   <Insets left="100.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" text="&lt;&lt; Retour" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button mnemonicParsing="false" onAction="#afficherFraisDate" text="&lt;&lt; Retour" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="50.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button mnemonicParsing="false" onAction="#afficherFraisTransport" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="150.0" />
                </GridPane.margin>
