--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisDate.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisDate.fxml
@@ -130,7 +130,7 @@
                   <Insets left="55.0" />
                </GridPane.margin></Label>
             <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button mnemonicParsing="false" onAction="#afficherFraisLogement" text="Suivant &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </children>
