--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisLogement.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisLogement.fxml
@@ -35,7 +35,7 @@
                <GridPane.margin>
                   <Insets left="100.0" />
                </GridPane.margin></Label>
-            <Label text="Nombre de fortfaits découchers :" GridPane.rowIndex="2">
+            <Label text="Nombre de forfaits découchers :" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="100.0" />
                </GridPane.margin></Label>
